// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField Component TextField renders 1`] = `
<div>
  <div
    class="fieldGroup size-2"
  >
    <input
      autocomplete="off"
      autocorrect="off"
      class="container"
      id="NAME"
      name="NAME"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`TextField Component TextField renders handles changes 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      autocorrect="off"
      class="container"
      data-testid="DATA-TEST-ID"
      id="NAME"
      name="NAME"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`TextField Component TextField renders in readonly 1`] = `
<div>
  <div
    class="fieldGroup size-6"
  >
    <span
      class="typography"
    >
      INPUT-VALUE
    </span>
  </div>
</div>
`;

exports[`TextField Component TextField renders in readonly highlighted 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <span
      class="typography highlighted"
    >
      -
    </span>
  </div>
</div>
`;

exports[`TextField Component TextField renders with error 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      autocorrect="off"
      class="container error"
      id="NAME"
      name="NAME"
      type="text"
      value="INPUT-VALUE"
    />
    <div
      class="message"
    >
      <div
        class="error field-error"
      >
        ERROR-MESSAGE
      </div>
    </div>
  </div>
</div>
`;
